@@ -1,2 +1,8 @@
 # Hair-Dresser-Reservation
 Application for booking hairdresser visits
+
+VM Options
+--module-path
+"C:\Program Files\Java\javafx-sdk-11.0.2\lib"
+--add-modules
+javafx.controls,javafx.fxml
